Closed Bug 537725 Opened 15 years ago Closed 15 years ago

assertion while running ES5 conformance tests

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1

People

(Reporter: sayrer, Unassigned)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

I'm trying to add this to our automated runs.
Attached file bt
http://hg.mozilla.org/tracemonkey/rev/ede43014b6c4
http://hg.mozilla.org/tracemonkey/rev/47acf3fe0fc8

Pushed that to fix the issues pointed out by it (also present with existing tests, not sure how I managed not to hit them), also addressed some issues with the Properties argument to Object.defineProperties being a primitive value.  I initally was unsure whether indexed properties on String objects were enumerable, so the second push was needed to fix a test I'd temporarily disabled until that issue could be resolved.
Blocks: 430133
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: x86 → All
Whiteboard: fixed-in-tracemonkey
Target Milestone: --- → mozilla1.9.3a1
Version: unspecified → Trunk
http://hg.mozilla.org/mozilla-central/rev/ede43014b6c4
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: