Bug 537725 - Adjust some exception-throwing code to use the proper APIs for no-argument messages, and fix handling of some primitive values passed as the Properties argument to Object.defineProperties.  r=jorendorff